--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,12 @@ version = "0.1.0"
 description = "Simple FastAPI notes service with SQLite"
 readme = "README.md"
 requires-python = ">=3.11"
-authors = [{name = "You"}]
-license = {text = "MIT"}
+authors = [{ name = "You" }]
+license = "MIT"  # prefer a simple SPDX string to avoid deprecation warning
 classifiers = [
     "Programming Language :: Python :: 3",
     "Framework :: FastAPI",
 ]
+
+[tool.setuptools]
+packages = ["app"]  # <-- force packaging only the 'app' package
