--- a/.github/workflows/jfrog-oidc-docker.yml
+++ b/.github/workflows/jfrog-oidc-docker.yml
@@ -1,4 +1,4 @@
-name: "JFrog OIDC CI Workflow with Curation + Xray (Docker + Python + Artifacts)"
+name: "JFrog OIDC CI Workflow with Curation + Xray (Docker + Python)"
 
 on:
   push:
@@ -10,44 +10,46 @@ permissions:
 
 env:
   PYTHON_VERSION: ${{ vars.PYTHON_VERSION || '3.11' }}
-  BUILD_NAME:     ${{ vars.BUILD_NAME     || 'jfrog-docker-security-scan-build' }}
-  BUILD_NUMBER:   ${{ vars.BUILD_NUMBER   || github.run_id }}
+  BUILD_NAME: ${{ vars.BUILD_NAME || 'jfrog-docker-security-scan-build' }}
+  BUILD_NUMBER: ${{ vars.BUILD_NUMBER || github.run_id }}
 
-  # Artifactory / repos
-  JF_REGISTRY:            ${{ vars.JF_REGISTRY            || 'aboavent.jfrog.io' }}
-  DOCKER_REPO:            ${{ vars.DOCKER_REPO            || 'notes-api-docker-repo' }}
-  CURATED_PYPI_VIRTUAL:   ${{ vars.CURATED_PYPI_VIRTUAL   || 'notes-api-pypi-curated' }}
-  PYPI_LOCAL_REPO:        ${{ vars.PYPI_LOCAL_REPO        || 'notes-api-pypi-local' }}
-  ARTIFACTS_REPO:         ${{ vars.ARTIFACTS_REPO         || 'notes-api-generic-local' }}
+  # JFrog / Artifactory
+  JF_REGISTRY: ${{ vars.JF_REGISTRY || 'aboavent.jfrog.io' }}
 
-  # Scanning behavior
+  # Repositories
+  DOCKER_REPO: ${{ vars.DOCKER_REPO || 'notes-api-docker-repo' }}
+  CURATED_PYPI_VIRTUAL: ${{ vars.CURATED_PYPI_VIRTUAL || 'notes-api-pypi-curated' }}
+  PYPI_LOCAL_REPO: ${{ vars.PYPI_LOCAL_REPO || 'notes-api-pypi-local' }}
+
+  # Xray
   FAIL_ON_SEVERITY: ${{ vars.FAIL_ON_SEVERITY || 'none' }}   # none|low|medium|high|critical
-  XRAY_FORMAT:      table
+  XRAY_FORMAT: table
 
-  # Quieter CLI logs, auto-skip sensitive envs in build-info
+  # JFrog CLI niceties
   JFROG_CLI_LOG_LEVEL: ERROR
-  JFROG_CLI_ENV_EXCLUDE: "*password*;*secret*;*key*;*token*;*auth*;JF_ARTIFACTORY_*;JF_ENV_*;JF_URL;JF_USER;JF_PASSWORD;JF_ACCESS_TOKEN"
+  JFROG_CLI_OFFER_CONFIG: false
 
 jobs:
   build-scan-and-publish:
     runs-on: ubuntu-latest
+
     steps:
-      - name: "Checkout"
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: "Set up Python"
+      - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
 
-      - name: "Setup JFrog CLI (OIDC)"
+      - name: Setup JFrog CLI (OIDC)
         uses: jfrog/setup-jfrog-cli@v4
         env:
-          JF_URL: ${{ vars.JF_URL }}  # e.g., https://aboavent.jfrog.io
+          JF_URL: ${{ vars.JF_URL }}                 # e.g. https://aboavent.jfrog.io
         with:
           oidc-provider-name: github-oidc-integration
 
-      - name: "Ensure jq is available"
+      - name: Ensure jq is available
         shell: bash
         run: |
           if ! command -v jq >/dev/null 2>&1; then
@@ -59,31 +61,57 @@ jobs:
         run: |
           set -euo pipefail
           echo "DOCKER_REPO=${{ env.DOCKER_REPO }}"
-          jf rt curl -s -XGET "/api/repositories/${{ env.DOCKER_REPO }}" | jq '{key,packageType,type,repositories,defaultDeploymentRepo}'
+          echo "PYPI_LOCAL_REPO=${{ env.PYPI_LOCAL_REPO }}"
+          echo "CURATED_PYPI_VIRTUAL=${{ env.CURATED_PYPI_VIRTUAL }}"
+          jf rt curl -s -XGET "/api/repositories/${{ env.DOCKER_REPO }}" | jq '{key,packageType,type}'
           {
             echo "### JFrog Settings"
             echo "- **JF_URL**: \`${{ vars.JF_URL }}\`"
-            echo "- **DOCKER_REPO**: \`${{ env.DOCKER_REPO }}\`"
-            echo "- **CURATED_PYPI_VIRTUAL**: \`${{ env.CURATED_PYPI_VIRTUAL }}\`"
-            echo "- **PYPI_LOCAL_REPO**: \`${{ env.PYPI_LOCAL_REPO }}\`"
-            echo "- **GENERIC_REPO**: \`${{ env.ARTIFACTS_REPO }}\`"
+            echo "- **Docker repo**: \`${{ env.DOCKER_REPO }}\`"
+            echo "- **PyPI local**: \`${{ env.PYPI_LOCAL_REPO }}\`"
+            echo "- **PyPI (curated virtual)**: \`${{ env.CURATED_PYPI_VIRTUAL }}\`"
           } >> "$GITHUB_STEP_SUMMARY"
 
       # ---------- Curation (pip) ----------
-      - name: "Configure pip to resolve via curated PyPI (project)"
+      - name: Configure pip to resolve via curated PyPI (project)
         shell: bash
         run: |
           set -euo pipefail
-          # project-level config (writes .jfrog/pip.yaml)
-          jf pip-config \
-            --repo-resolve "${{ env.CURATED_PYPI_VIRTUAL }}"
+          jf pip c \
+            --repo-resolve "${{ env.CURATED_PYPI_VIRTUAL }}" \
+            --server-id-resolve "setup-jfrog-cli-server" \
+            --global=false
+          find .jfrog -maxdepth 3 -type f -print || true
 
-      - name: "Curation audit (requirements.txt)"
+      - name: Curation audit (requirements.txt)
         shell: bash
-        run: jf curation-audit --format table 
+        run: jf curation-audit --requirements-file requirements.txt --format table || true
+
+      # ---------- Python package: build & publish to PyPI-local ----------
+      - name: Build Python distributions
+        shell: bash
+        run: |
+          python -m pip install --upgrade pip build
+          python -m build
+          ls -l dist || true
+
+      - name: Publish Python dists to Artifactory PyPI local
+        env:
+          BUILD_NAME:   ${{ env.BUILD_NAME }}
+          BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
+        shell: bash
+        run: |
+          jf rt upload "dist/*" "${{ env.PYPI_LOCAL_REPO }}/" \
+            --flat=false \
+            --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
+
+      # ---------- Source/Secrets/IaC scan (non-blocking) ----------
+      - name: Scan repository (non-blocking)
+        shell: bash
+        run: jf scan . --fail=false --format "${{ env.XRAY_FORMAT }}"
 
       # ---------- Build Docker image ----------
-      - name: "Compose image tag"
+      - name: Compose image tag
         id: tags
         shell: bash
         run: |
@@ -92,18 +120,17 @@ jobs:
           REF_TAG="${{ env.JF_REGISTRY }}/${{ env.DOCKER_REPO }}/${NAME}:${SAFE_BRANCH}"
           echo "ref_tag=${REF_TAG}" >> "$GITHUB_OUTPUT"
 
-      - name: "Build image (local)"
+      - name: Build image (local)
         shell: bash
-        run: |
-          docker build -t "${{ steps.tags.outputs.ref_tag }}" .
+        run: docker build -t "${{ steps.tags.outputs.ref_tag }}" .
 
-      # ---------- Xray: local Docker image scan (non-blocking) ----------
-      - name: "Xray scan local image (non-blocking)"
+      # ---------- Xray image scan (local daemon, non-blocking) ----------
+      - name: Xray scan of local Docker image (non-blocking)
         shell: bash
-        run: jf docker scan "${{ steps.tags.outputs.ref_tag }}" --format "${{ env.XRAY_FORMAT }}" --fail=false
+        run: jf docker scan "${{ steps.tags.outputs.ref_tag }}" --fail=false --format "${{ env.XRAY_FORMAT }}"
 
-      # ---------- Push & record build-info ----------
-      - name: "Push image & record build-info (ref tag)"
+      # ---------- Push & record build-info (Docker) ----------
+      - name: Push image & record build-info (ref tag only)
         env:
           BUILD_NAME:   ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
@@ -113,7 +140,7 @@ jobs:
             --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
 
       # ---------- Publish build-info ----------
-      - name: "Publish build-info"
+      - name: Publish build-info
         env:
           BUILD_NAME:   ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
@@ -121,7 +148,7 @@ jobs:
         run: jf rt build-publish "${BUILD_NAME}" "${BUILD_NUMBER}"
 
       # ---------- Xray Build Scan (policy-gated) ----------
-      - name: "Scan published build (policy-gated)"
+      - name: Scan published build (policy-gated)
         env:
           BUILD_NAME:       ${{ env.BUILD_NAME }}
           BUILD_NUMBER:     ${{ env.BUILD_NUMBER }}
@@ -134,7 +161,7 @@ jobs:
             jf bs "${BUILD_NAME}" "${BUILD_NUMBER}" --fail-on-severity "${FAIL_ON_SEVERITY}"
           fi
 
-      - name: "Summarize Xray build scan in job summary"
+      - name: Summarize Xray build scan in job summary
         env:
           BUILD_NAME:   ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
@@ -154,62 +181,3 @@ jobs:
             echo "- **Medium**: ${MED}"
             echo "- **Low**: ${LOW}"
           } >> "$GITHUB_STEP_SUMMARY"
-
-      # ---------- Python package (optional) ----------
-      - name: "Build Python package (if pyproject exists)"
-        shell: bash
-        run: |
-          set -euo pipefail
-          ROOT_PY=pyproject.toml
-          APP_PY=app/pyproject.toml
-          WORKDIR="."
-          if [ -f "$ROOT_PY" ]; then
-            WORKDIR="."
-          elif [ -f "$APP_PY" ]; then
-            WORKDIR="app"
-          else
-            echo "No pyproject.toml found; skipping Python package build."
-            exit 0
-          fi
-          python -m pip install --upgrade pip
-          python -m pip install build
-          pushd "$WORKDIR" >/dev/null
-          python -m build
-          popd >/dev/null
-
-      - name: "Upload Python package to Artifactory PyPI"
-        if: ${{ hashFiles('pyproject.toml') != '' || hashFiles('app/pyproject.toml') != '' }}
-        env:
-          BUILD_NAME:   ${{ env.BUILD_NAME }}
-          BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
-        shell: bash
-        run: |
-          set -euo pipefail
-          DIST_DIR="dist"
-          if [ -d "app/dist" ]; then DIST_DIR="app/dist"; fi
-          jf rt upload "${DIST_DIR}/*" "${{ env.PYPI_LOCAL_REPO }}" \
-            --target-props "git.sha=${GITHUB_SHA};app=notes-api;type=python" \
-            --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
-
-      # ---------- Generic repo snapshot ----------
-      - name: "Package repo snapshot (tracked files only)"
-        shell: bash
-        run: |
-          set -euo pipefail
-          SNAP="notes-api-${GITHUB_SHA}.tar.gz"
-          # Use git archive to avoid 'file changed as we read it'
-          git archive --format=tar.gz -o "$SNAP" --prefix=notes-api/ HEAD
-          ls -lh "$SNAP"
-
-      - name: "Upload snapshot to Generic repo"
-        env:
-          BUILD_NAME:   ${{ env.BUILD_NAME }}
-          BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
-        shell: bash
-        run: |
-          set -euo pipefail
-          SNAP="notes-api-${GITHUB_SHA}.tar.gz"
-          TARGET="${{ env.ARTIFACTS_REPO }}/notes-api/${GITHUB_SHA}/"
-          jf rt upload "$SNAP" "$TARGET" \
-            --target-props "git.sha=${GITHUB_SHA};app=notes-api;type=snapshot" \
-            --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
