--- a/.github/workflows/jfrog-oidc-docker.yml
+++ b/.github/workflows/jfrog-oidc-docker.yml
@@ -10,105 +10,87 @@ permissions:
 
 env:
   PYTHON_VERSION: ${{ vars.PYTHON_VERSION || '3.11' }}
-  BUILD_NAME: ${{ vars.BUILD_NAME || 'jfrog-docker-security-scan-build' }}
-  BUILD_NUMBER: ${{ vars.BUILD_NUMBER || github.run_id }}
+  BUILD_NAME:     ${{ vars.BUILD_NAME     || 'jfrog-docker-security-scan-build' }}
+  BUILD_NUMBER:   ${{ vars.BUILD_NUMBER   || github.run_id }}
 
-  # JFrog / Artifactory
-  JF_REGISTRY: ${{ vars.JF_REGISTRY || 'aboavent.jfrog.io' }}
-
-  # Repositories
-  DOCKER_REPO: ${{ vars.DOCKER_REPO || 'notes-api-docker-repo' }}
+  # Registries / repos
+  JF_REGISTRY:    ${{ vars.JF_REGISTRY    || 'aboavent.jfrog.io' }}        # host only
+  DOCKER_REPO:    ${{ vars.DOCKER_REPO    || 'notes-api-docker-repo' }}    # Docker repo key in Artifactory
   CURATED_PYPI_VIRTUAL: ${{ vars.CURATED_PYPI_VIRTUAL || 'notes-api-pypi-curated' }}
-  PYPI_LOCAL_REPO: ${{ vars.PYPI_LOCAL_REPO || 'notes-api-pypi-local' }}
+  PYPI_LOCAL_REPO:      ${{ vars.PYPI_LOCAL_REPO      || 'notes-api-pypi-local' }}
 
-  # Xray
-  FAIL_ON_SEVERITY: ${{ vars.FAIL_ON_SEVERITY || 'none' }}   # none|low|medium|high|critical
+  # Scanning / output
+  FAIL_ON_SEVERITY: ${{ vars.FAIL_ON_SEVERITY || 'none' }}  # none|low|medium|high|critical
   XRAY_FORMAT: table
 
-  # JFrog CLI niceties
+  # JFrog CLI quality-of-life
   JFROG_CLI_LOG_LEVEL: ERROR
-  JFROG_CLI_OFFER_CONFIG: false
+  JFROG_CLI_OFFER_CONFIG: "false"
 
 jobs:
   build-scan-and-publish:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-
-      - name: Setup JFrog CLI (OIDC)
-        uses: jfrog/setup-jfrog-cli@v4
-        env:
-          JF_URL: ${{ vars.JF_URL }}                 # e.g. https://aboavent.jfrog.io
-        with:
-          oidc-provider-name: github-oidc-integration
-
       - name: Ensure jq is available
-        shell: bash
         run: |
           if ! command -v jq >/dev/null 2>&1; then
             sudo apt-get update -y && sudo apt-get install -y jq
           fi
+
+      - name: Setup JFrog CLI (OIDC)
+        uses: jfrog/setup-jfrog-cli@v4
+        env:
+          JF_URL: ${{ vars.JF_URL }}  # e.g., https://aboavent.jfrog.io
+        with:
+          oidc-provider-name: github-oidc-integration
 
       - name: "Sanity: show effective settings"
         shell: bash
         run: |
           set -euo pipefail
           echo "DOCKER_REPO=${{ env.DOCKER_REPO }}"
-          echo "PYPI_LOCAL_REPO=${{ env.PYPI_LOCAL_REPO }}"
-          echo "CURATED_PYPI_VIRTUAL=${{ env.CURATED_PYPI_VIRTUAL }}"
-          jf rt curl -s -XGET "/api/repositories/${{ env.DOCKER_REPO }}" | jq '{key,packageType,type}'
+          jf rt curl -s -XGET "/api/repositories/${{ env.DOCKER_REPO }}" | jq '{key,packageType,type,repositories,defaultDeploymentRepo}'
           {
             echo "### JFrog Settings"
             echo "- **JF_URL**: \`${{ vars.JF_URL }}\`"
-            echo "- **Docker repo**: \`${{ env.DOCKER_REPO }}\`"
-            echo "- **PyPI local**: \`${{ env.PYPI_LOCAL_REPO }}\`"
-            echo "- **PyPI (curated virtual)**: \`${{ env.CURATED_PYPI_VIRTUAL }}\`"
+            echo "- **DOCKER_REPO**: \`${{ env.DOCKER_REPO }}\`"
           } >> "$GITHUB_STEP_SUMMARY"
+
+      # ---------- Source scan: SAST / Secrets / IaC (non-blocking) ----------
+      - name: Scan repository (non-blocking)
+        run: jf scan . --fail=false --format "${{ env.XRAY_FORMAT }}"
 
       # ---------- Curation (pip) ----------
       - name: Configure pip to resolve via curated PyPI (project)
         shell: bash
         run: |
           set -euo pipefail
-          jf pip c \
+          jf pip-config \
             --repo-resolve "${{ env.CURATED_PYPI_VIRTUAL }}" \
-            --server-id-resolve "setup-jfrog-cli-server" \
-            --global=false
+            --server-id-resolve "setup-jfrog-cli-server"
+          # show created config files
           find .jfrog -maxdepth 3 -type f -print || true
 
-      - name: Curation audit (requirements.txt)
+      - name: Curation audit (project)
         shell: bash
-        run: jf curation-audit --requirements-file requirements.txt --format table || true
+        run: jf curation-audit --format table || true
 
-      # ---------- Python package: build & publish to PyPI-local ----------
-      - name: Build Python distributions
+      # ---------- Build Python package (sdist + wheel) ----------
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Build Python dist
         shell: bash
         run: |
+          set -euo pipefail
           python -m pip install --upgrade pip build
           python -m build
-          ls -l dist || true
-
-      - name: Publish Python dists to Artifactory PyPI local
-        env:
-          BUILD_NAME:   ${{ env.BUILD_NAME }}
-          BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
-        shell: bash
-        run: |
-          jf rt upload "dist/*" "${{ env.PYPI_LOCAL_REPO }}/" \
-            --flat=false \
-            --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
-
-      # ---------- Source/Secrets/IaC scan (non-blocking) ----------
-      - name: Scan repository (non-blocking)
-        shell: bash
-        run: jf scan . --fail=false --format "${{ env.XRAY_FORMAT }}"
+          ls -lh dist || true
 
       # ---------- Build Docker image ----------
       - name: Compose image tag
@@ -121,16 +103,16 @@ jobs:
           echo "ref_tag=${REF_TAG}" >> "$GITHUB_OUTPUT"
 
       - name: Build image (local)
-        shell: bash
-        run: docker build -t "${{ steps.tags.outputs.ref_tag }}" .
+        run: |
+          docker build -t "${{ steps.tags.outputs.ref_tag }}" .
 
-      # ---------- Xray image scan (local daemon, non-blocking) ----------
-      - name: Xray scan of local Docker image (non-blocking)
+      # ---------- Local image scan with Xray (non-blocking) ----------
+      - name: Docker image scan (local daemon, non-blocking)
         shell: bash
         run: jf docker scan "${{ steps.tags.outputs.ref_tag }}" --fail=false --format "${{ env.XRAY_FORMAT }}"
 
-      # ---------- Push & record build-info (Docker) ----------
-      - name: Push image & record build-info (ref tag only)
+      # ---------- Push & record build-info ----------
+      - name: Push image & record build-info (ref tag)
         env:
           BUILD_NAME:   ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
@@ -139,12 +121,27 @@ jobs:
           jf rt docker-push "${{ steps.tags.outputs.ref_tag }}" "${{ env.DOCKER_REPO }}" \
             --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
 
+      # ---------- Publish Python package to Artifactory (PyPI local) ----------
+      - name: Upload Python dist to PyPI local (record build-info)
+        if: ${{ always() }}  # don't block Docker path if Python build produced no dists
+        env:
+          BUILD_NAME:   ${{ env.BUILD_NAME }}
+          BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
+        shell: bash
+        run: |
+          set -euo pipefail
+          if compgen -G "dist/*" > /dev/null; then
+            jf rt upload "dist/*" "${{ env.PYPI_LOCAL_REPO }}/" \
+              --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
+          else
+            echo "No Python distributions found under dist/. Skipping upload."
+          fi
+
       # ---------- Publish build-info ----------
       - name: Publish build-info
         env:
           BUILD_NAME:   ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
-        shell: bash
         run: jf rt build-publish "${BUILD_NAME}" "${BUILD_NUMBER}"
 
       # ---------- Xray Build Scan (policy-gated) ----------
@@ -165,7 +162,6 @@ jobs:
         env:
           BUILD_NAME:   ${{ env.BUILD_NAME }}
           BUILD_NUMBER: ${{ env.BUILD_NUMBER }}
-        shell: bash
         run: |
           set -euo pipefail
           jf bs "${BUILD_NAME}" "${BUILD_NUMBER}" --format simple-json | tee scan.json || true
