--- a/.github/workflows/jfrog-oidc-docker.yml
+++ b/.github/workflows/jfrog-oidc-docker.yml
@@ -58,22 +58,29 @@ jobs:
       - name: Scan repository (non-blocking)
         run: jf scan . --fail=false --format "${{ env.XRAY_FORMAT }}"
 
+      # (Optional) Keep python version consistent for audit/packaging
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
       # ---------- Curation (pip) ----------
       - name: Configure pip to resolve via curated PyPI (project + global fallback)
         shell: bash
         run: |
           set -euo pipefail
-          # Project-level config (preferred)
-          jf pip c \
+          # Project-level config (writes .jfrog/projects/pip.yaml)
+          jf pip-config \
+            --repo-resolve "${{ env.CURATED_PYPI_VIRTUAL }}" \
+            --server-id-resolve "setup-jfrog-cli-server"
+
+          # Global fallback (writes $HOME/.jfrog/pip.yaml) so 'jf audit' always has a config
+          jf pip-config \
             --repo-resolve "${{ env.CURATED_PYPI_VIRTUAL }}" \
             --server-id-resolve "setup-jfrog-cli-server" \
-            --global=false
-          # Global fallback (ensures jf audit can always find config)
-          jf pip c \
-            --repo-resolve "${{ env.CURATED_PYPI_VIRTUAL }}" \
-            --server-id-resolve "setup-jfrog-cli-server" \
-            --global=true
-          # Show what got written (if any)
+            --global
+
+          # Show what got written (best-effort)
           find .jfrog -maxdepth 3 -type f -print || true
           ls -la "$HOME/.jfrog" || true
 
@@ -121,11 +128,6 @@ jobs:
             --build-name "${BUILD_NAME}" --build-number "${BUILD_NUMBER}"
 
       # ---------- Build Python package & upload ----------
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-
       - name: Build wheel/sdist
         run: |
           python -m pip install -U pip build
